# lilt

./: Cargo.toml  README.md
.github/workflows/: check-coverage.yml  codecov.yml  public-api.yml  record-coverage.yml  rust.yml  snapshot.yml
coverage-data/: cov-action-b65600e1a65aa16bc189df54b76c238ced732706.json
examples/gpui-example/src/: main.rs  main_macos.rs
examples/iced-demo/: Cargo.toml
examples/iced-demo/src/: main.rs
examples/iced-indicator/: Cargo.toml
examples/iced-indicator/src/: main.rs
examples/iced-minimal/: Cargo.toml
examples/iced-minimal/src/: main.rs
examples/macroquad-example/: Cargo.toml  README.md  index.html
examples/macroquad-example/src/: main.rs
src/: animated.rs  lib.rs  public_api_test.rs  traits.rs
