[workspace]
resolver = "2"
members = [
    "examples/iced-minimal",
    "examples/iced-indicator",
    "examples/iced-demo",
    "examples/gpui-example",
    "examples/macroquad-example",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/ejjonny/lilt"
license = "MIT"
keywords = ["animation", "interpolation"]
authors = ["ejjonny"]

[package]
name = "lilt"
description = "A simple, dependency free library for running interruptable, transition based animations as a function of time."
version.workspace = true
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
authors = { workspace = true }

[lib]
crate-type = ["lib"]
