[package]
name = "lilt"
version = "0.7.0"
edition = "2021"
description = "A simple, dependency free library for running interruptable, transition based animations as a function of time."
repository = "https://github.com/ejjonny/lilt"
license = "MIT"
keywords = ["animation", "interpolation"]
authors = ["ejjonny"]

[lib]
crate-type = ["lib"]

[features]
examples = []
test-api = []

[[example]]
name = "iced-minimal"
path = "examples/iced-minimal/src/main.rs"
required-features = ["examples"]

[[example]]
name = "iced-demo"
path = "examples/iced-demo/src/main.rs"
required-features = ["examples"]

[[example]]
name = "iced-indicator"
path = "examples/iced-indicator/src/main.rs"
required-features = ["examples"]

[[example]]
name = "macroquad-example"
path = "examples/macroquad-example/src/main.rs"
required-features = ["examples"]

[target.'cfg(feature = "examples")'.dev-dependencies]
iced = { git = "https://github.com/iced-rs/iced", rev = "169667ef1b4fa754ed1edb5fa0e845aede2638fb", features = [
    "canvas",
    "tokio",
    "svg",
] }
macroquad = "0.4.13"

[dev-dependencies]
insta = "1.42.1"
public-api = "0.43.0"
rustdoc-json = "0.9.4"
rustup-toolchain = "0.1.9"

[dependencies]
web-time = "1.1.0"
