[package]
name = "lilt"
version = "0.8.0"
edition = "2024"
description = " A simple library for running interruptable, transition based animations as a function of time."
repository = "https://github.com/cyypherus/lilt"
license = "MIT"
keywords = ["animation", "interpolation"]
authors = ["cyypherus"]

[lib]
crate-type = ["lib"]

[features]
iced-examples = ["iced"]
macroquad-examples = ["macroquad"]
test-api = []

[[example]]
name = "iced-minimal"
path = "examples/iced-minimal/src/main.rs"
required-features = ["iced-examples"]

[[example]]
name = "iced-demo"
path = "examples/iced-demo/src/main.rs"
required-features = ["iced-examples"]

[[example]]
name = "iced-indicator"
path = "examples/iced-indicator/src/main.rs"
required-features = ["iced-examples"]

[[example]]
name = "macroquad-example"
path = "examples/macroquad-example/src/main.rs"
required-features = ["macroquad-examples"]

[dev-dependencies]
insta = "1.42.1"
public-api = "0.43.0"
rustdoc-json = "0.9.4"
rustup-toolchain = "0.1.9"

[dependencies]
web-time = "1.1.0"

# Example dependencies - dev dependencies can't currently be optional,
# but examples are behind the examples features
iced = { git = "https://github.com/iced-rs/iced", rev = "169667ef1b4fa754ed1edb5fa0e845aede2638fb", features = [
    "canvas",
    "tokio",
    "svg",
], optional = true }
macroquad = { version = "0.4.13", optional = true }
